force-app/main/default/objects/CRMforNonProfit__Darujme_Transaction__c/CRMforNonProfit__Darujme_Transaction__c.object-meta.xml
<CustomObject>
    <label>Darujme Transaction</label>
    <nameField>
        <displayFormat>T-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Darujme Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>