force-app/main/default/objects/CRMforNonProfit__Darujme_Transaction__c/fields/CRMforNonProfit__Outgoing_At__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Outgoing_At__c</fullName>
    <description>Date when the money was sent to NNO by Darujme.cz</description>
    <label>Outgoing At</label>
    <type>Date</type>
</CustomField>