force-app/main/default/objects/CRMforNonProfit__Darujme_Transaction__c/fields/CRMforNonProfit__Outgoing_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Outgoing_Bank_Account__c</fullName>
    <label>Outgoing Bank Account</label>
    <length>25</length>
    <type>Text</type>
</CustomField>