force-app/main/default/objects/CRMforNonProfit__Darujme_Transaction__c/fields/CRMforNonProfit__Outgoing_VS__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Outgoing_VS__c</fullName>
    <label>Outgoing VS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>