force-app/main/default/objects/CRMforNonProfit__Darujme_Transaction__c/fields/CRMforNonProfit__Pledge__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Pledge__c</fullName>
    <label>Pledge</label>
    <referenceTo>CRMforNonProfit__Darujme_Pledge__c</referenceTo>
    <relationshipLabel>Darujme Transactions</relationshipLabel>
    <relationshipName>Darujme_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>