force-app/main/default/objects/CRMforNonProfit__Darujme_Transaction__c/fields/CRMforNonProfit__Presentable_Code__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Presentable_Code__c</fullName>
    <label>Presentable Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>