force-app/main/default/objects/CRMforNonProfit__Darujme_Transaction__c/fields/CRMforNonProfit__Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Received_Amount__c</fullName>
    <label>Received Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>