force-app/main/default/objects/CRMforNonProfit__Darujme_Transaction__c/fields/CRMforNonProfit__Received_At__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Received_At__c</fullName>
    <label>Received At</label>
    <length>50</length>
    <type>Text</type>
</CustomField>