force-app/main/default/objects/CRMforNonProfit__Darujme_Transaction__c/fields/CRMforNonProfit__Sent_Amount__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Sent_Amount__c</fullName>
    <label>Sent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>