force-app/main/default/objects/CRMforNonProfit__Darujme_Transaction__c/fields/CRMforNonProfit__State__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pending</fullName>
            </value>
            <value>
                <fullName>pending_confirmation</fullName>
            </value>
            <value>
                <fullName>pending_update</fullName>
            </value>
            <value>
                <fullName>success</fullName>
            </value>
            <value>
                <fullName>success_money_on_account</fullName>
            </value>
            <value>
                <fullName>sent_to_organization</fullName>
            </value>
            <value>
                <fullName>failure</fullName>
            </value>
            <value>
                <fullName>error</fullName>
            </value>
            <value>
                <fullName>refund</fullName>
            </value>
            <value>
                <fullName>timeout</fullName>
            </value>
            <value>
                <fullName>cancelled</fullName>
            </value>
            <value>
                <fullName>canceled</fullName>
            </value>
            <value>
                <fullName>hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>