force-app/main/default/objects/CRMforNonProfit__Darujme_Transaction__c/fields/CRMforNonProfit__Transferred__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Transferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transferred</label>
    <type>Checkbox</type>
</CustomField>